--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "diglactic/laravel-breadcrumbs": "*",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "phpclassic/php-shopify": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
@@ -50,7 +52,15 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [],
+            "laravel": {
+                "providers": [
+                    "Diglactic\\Breadcrumbs\\BreadcrumbsServiceProvider::class"
+                ],
+                "aliases": {
+                    "Breadcrumbs": "Diglactic\\Breadcrumbs\\Facades\\Breadcrumbs::class"
+                }
+            }
         }
     },
     "config": {
