--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:lcTOjY7+uuzS+NxyToKcGEHfp112pKXeioqeJEIZno8=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL= https://0ff4-112-200-43-79.ngrok-free.app
+APP_URL=127.0.0.1
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
